--- a/Surge/Scripting.conf
+++ b/Surge/Scripting.conf
@@ -4,6 +4,15 @@ IP-CIDR,203.119.144.0/23,REJECT,no-resolve
 IP-CIDR,203.119.175.0/24,REJECT,no-resolve
 IP-CIDR,106.11.162.0/24,REJECT,no-resolve
 IP-CIDR,47.102.83.0/24,REJECT,no-resolve
+//ZhiHu
+USER-AGENT,AVOS*,REJECT-TINYGIF
+URL-REGEX,https://www.zhihu.com/api/v4/mcn/,REJECT-TINYGIF
+URL-REGEX,https://api.zhihu.com/(ab|adx|drama|fringe|zst|commercial|ad-style-service|market/popover|search/(top|tab|preset)|.*(guide|recommendations|extended|featured-comment-ad)),REJECT-TINYGIF
+AND,((USER-AGENT,osee2*), (NOT,((DOMAIN-SUFFIX,zhihu.com))), (NOT,((DOMAIN-SUFFIX,zhimg.com)))),REJECT-TINYGIF
+//BiliBili
+URL-REGEX,https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)),REJECT-TINYGIF
+URL-REGEX,https://api.bilibili.com/x/v2/dm/advert,REJECT-TINYGIF
+AND,((USER-AGENT,bili*), (NOT,((DOMAIN-SUFFIX,bilibili.com))),(NOT,((DOMAIN-SUFFIX,hdslb.com)))),REJECT-TINYGIF
 [MITM]
 skip-server-cert-verify = true
 tcp-connection = true
