--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -18,7 +18,7 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ;ip-cidr, 106.11.162.0/24, reject, no-resolve
 ;ip-cidr, 47.102.83.0/24, reject, no-resolve
 ;或使用JS屏蔽
-^https?://amdc\.m\.taobao\.com/amdc/mobileDispatch url script-response-body yichahucha/tb_price.js
+;^https?://amdc\.m\.taobao\.com/amdc/mobileDispatch url script-response-body yichahucha/tb_price.js
 ^https://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body yichahucha/tb_price.js
 
 ;Netflix 获取 IMDb 分数 by yichahucha
