--- a/QuantumultX/GetCookies.conf
+++ b/QuantumultX/GetCookies.conf
@@ -1,4 +1,4 @@
-hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.com,api.m.jd.com
+hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.com,api.m.jd.com,wx.10086.cn
 ;获取cookie专用，摘自chavy&NobyDa
 
 ;网易云音乐签到
@@ -24,3 +24,7 @@ https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header NobyDa/Quantu
 ;京东签到
 ;进入https://bean.m.jd.com/,点击签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean(Index|GroupStageIndex) url script-request-header NobyDa/JD-DailyBonus/JD_DailyBonus.js
+
+;10086签到
+^http:\/\/wx.10086.cn\/website\/taskCenter\/index\? url script-request-header chavy/10086/10086.cookie.js
+^http:\/\/wx.10086.cn\/website\/taskCenter\/sign\? url script-request-header chavy/10086/10086.cookie.js
