--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -18,8 +18,7 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ;ip-cidr, 106.11.162.0/24, reject, no-resolve
 ;ip-cidr, 47.102.83.0/24, reject, no-resolve
 ;或使用JS屏蔽
-;^https?://amdc\.m\.taobao\.com/amdc/mobileDispatch url script-response-body yichahucha/tb_price.js
-^https://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body yichahucha/tb_price.js
+^https?://(trade-acs|amdc)\.m\.taobao\.com/(gw/mtop\.taobao\.detail\.getdetail|amdc/mobileDispatch) url script-response-body yichahucha/tb_price.js
 
 ;Netflix 获取 IMDb 分数 by yichahucha
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header yichahucha/nf_rating.js
@@ -28,7 +27,6 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 # 去微博应用内广告 by yichahucha
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body wb_ad.js
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body wb_launch.js
-
 
 # 去微信公众号广告 by Choler
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body NobyDa/QuantumultX/File/Wechat.js
@@ -63,6 +61,5 @@ https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-im
 # 用药助手解锁专业版 (By Primovist)
 ^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) url script-response-body NobyDa/Surge/JS/yyzs.js
 
-;# Fantastical pro
-;^https:\/\/api\.flexibits\.com\/v1\/(auth|account)\/(device|details|appstore-receipt)\/$ url script-response-body Fantastical.js
+
 
