--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -32,7 +32,7 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body NobyDa/QuantumultX/File/Wechat.js
 
 # 知乎去广告(修正)
-^https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-img
+https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-img
 ^https:\/\/api\.zhihu\.com\/appview\/api\/v4\/answers\/.*\/recommendations url reject-img
 ^https:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|v\d\/questions|market\/header|people\/) url script-response-body ZhiHuAdBlock.js
 
