--- a/QuantumultX/GetCookies.conf
+++ b/QuantumultX/GetCookies.conf
@@ -23,7 +23,7 @@ https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header NobyDa/Quantu
 
 ;京东签到
 ;进入https://bean.m.jd.com/,点击签到获取cookie
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean(Index|GroupStageIndex) url script-request-header NobyDa/JD-DailyBonus/JD_DailyBonus.js
+https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header NobyDa/JD-DailyBonus/JD_DailyBonus.js
 
 ;10086签到
 ^http:\/\/wx.10086.cn\/website\/taskCenter\/index\? url script-request-header chavy/10086/10086.cookie.js
