--- a/QuantumultX/Rewrite/Advertising.conf
+++ b/QuantumultX/Rewrite/Advertising.conf
@@ -1,14 +1,20 @@
-hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,api-new.app.acfun.cn,api.bjxkhc.com,7n.bczcdn.com,issuecdn.baidupcs.com,app.bilibili.com,manga.bilibili.com,channel.beitaichufang.com,iapi.bishijie.com,app.api.ke.com,status.boohee.com,app.poizon.com,api.douban.com,rtbapi.douyucdn.cn,e.dangdang.com,daoyu.sdo.com,dxy.com,www.flyertea.com,app.variflight.com,dsa-mfp.fengshows.cn,consumer.fcbox.com,youtubei.googleapis.com,*.youtube.com,gateway.shouqiev.com,dl.app.gtja.com,m.ibuscloud.com,smkmp.96225.com,api.huomao.com,api.haohaozhu.cn,api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com,img.jiemian.com,api.jxedt.com,richmanapi.jxedt.com,*.kakamobi.cn,ios.wps.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,api.vistopia.com.cn,ios.lantouzi.com,api.jr.mi.com,api-mifit*.huami.com,api.mgzf.com,cdn.moji.com,mob.mddcloud.com,*.meituan.net,capi.mwee.cn,mapi.mafengwo.cn,nnapp.cloudbae.cn,NationalGeographic,NationalGeographicChina,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,open.qyer.com,media.qyer.com,api.qbb6.com,msspjh.emarbox.com,api.rr.tv,*.daydaycook.com,*.k.sohu.com,*.tv.sohu.com,*.smzdm.com,service.4gtv.tv,gw-passenger.01zhuanche.com,img*.10101111cdn.com,api.intsig.net,api.waitwaitpay.com,business-cdn.shouji.sogou.com,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,m.tuniu.com,static.vuevideo.net,appconf.mail.163.com,c.m.163.com,client.mail.163.com,interface.music.163.com,sp.kaola.com,support.you.163.com,p.du.163.com,oimage*.ydstatic.com,app.wy.guahao.com,*-release.wuta-cam.com,snailsleep.net,thor.weidian.com,api.feng.com,*.uve.weibo.com,weibointl.api.weibo.cn,api.xiachufang.com,api.psy-1.com,portal-xunyou.qingcdn.com,tiku.zhan.com,m.yap.yahoo.com,i.ys7.com,app.mixcapp.com,app.yinxiang.com,restapi.iyunmai.com,yxyapi*.drcuiyutao.com,api.zhihu.com,a.qiumibao.com,*.zhuishushenqi.com,www.zybang.com,api.izuiyou.com,*.amemv.com,*.musical.ly,*.snssdk.com,*.tiktokv.com,*.pstatp.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,ih2.ireader.com
+hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,api-new.app.acfun.cn,api.bjxkhc.com,7n.bczcdn.com,issuecdn.baidupcs.com,app.bilibili.com,manga.bilibili.com,channel.beitaichufang.com,iapi.bishijie.com,app.api.ke.com,status.boohee.com,app.poizon.com,api.douban.com,rtbapi.douyucdn.cn,e.dangdang.com,daoyu.sdo.com,dxy.com,www.flyertea.com,app.variflight.com,dsa-mfp.fengshows.cn,consumer.fcbox.com,youtubei.googleapis.com,*.youtube.com,gateway.shouqiev.com,dl.app.gtja.com,m.ibuscloud.com,smkmp.96225.com,api.huomao.com,api.haohaozhu.cn,api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com,img.jiemian.com,api.jxedt.com,richmanapi.jxedt.com,*.kakamobi.cn,ios.wps.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,api.vistopia.com.cn,ios.lantouzi.com,api.jr.mi.com,api-mifit*.huami.com,api.mgzf.com,cdn.moji.com,mob.mddcloud.com,*.meituan.net,capi.mwee.cn,mapi.mafengwo.cn,nnapp.cloudbae.cn,NationalGeographic,NationalGeographicChina,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,open.qyer.com,media.qyer.com,api.qbb6.com,msspjh.emarbox.com,api.rr.tv,*.daydaycook.com,*.k.sohu.com,*.tv.sohu.com,*.smzdm.com,service.4gtv.tv,gw-passenger.01zhuanche.com,mpcs.suning.com,img*.10101111cdn.com,api.intsig.net,api.waitwaitpay.com,business-cdn.shouji.sogou.com,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,m.tuniu.com,static.vuevideo.net,appconf.mail.163.com,c.m.163.com,client.mail.163.com,interface.music.163.com,sp.kaola.com,support.you.163.com,p.du.163.com,oimage*.ydstatic.com,app.wy.guahao.com,*-release.wuta-cam.com,snailsleep.net,thor.weidian.com,api.feng.com,mapi.appvipshop.com,*.uve.weibo.com,weibointl.api.weibo.cn,api.xiachufang.com,api.psy-1.com,portal-xunyou.qingcdn.com,tiku.zhan.com,m.yap.yahoo.com,i.ys7.com,app.mixcapp.com,app.yinxiang.com,restapi.iyunmai.com,yxyapi*.drcuiyutao.com,api.zhihu.com,a.qiumibao.com,*.zhuishushenqi.com,www.zybang.com,api.izuiyou.com,*.amemv.com,*.musical.ly,*.snssdk.com,*.tiktokv.com,*.pstatp.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,ih2.ireader.com
 
 # 0~9
 # > 21经济 - api.21jingji.com
 ^(http|https):\/\/api\.21jingji\.com\/ad\/ url reject
+# > 58同城 - app.58.com,pic?.ajkimg.com,103.75.153.6
+^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv)\/ url reject
+^https?:\/\/app\.58\.com\/api\/home\/invite\/popupAdv url reject
+^https?:\/\/app\.58\.com\/api\/log\/ url reject
+^https?:\/\/.+\.58cdn\.com\.cn\/brandads\/ url reject
+^https?:\/\/103\.75\.153\.6\/adfront/ url reject
+^https?:\/\/pic\d.ajkimg.com/.+750x1334 url reject
 
 # A
 # --- (阿里巴巴) ---
 # > 淘宝 - gw.alicdn.com,heic.alicdn.com
-^(http|https):\/\/(gw|heic)\.alicdn\.com\/.*\.jpg_(9\d{2}|\d{4}) url reject
-^(http|https):\/\/gw\.alicdn\.com\/tfs\/\w+-\d{3}-\d{4}\.(jpg|png) url reject
+^(http|https):\/\/(gw|heic)\.alicdn\.com\/.+-\d{4}\.jpg_(9\d{2}|\d{4}) url reject
 # > 闲鱼 - acs.m.taobao.com
 ^(http|https):\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.idle\.home\.welcome\/ url reject
 # > 飞猪 - acs.m.taobao.com
@@ -140,6 +146,8 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicd
 ^(http|https):\/\/gateway\.shouqiev\.com\/fsda\/app\/bootImage\.json url reject
 # > 国泰君安 - dl.app.gtja.com
 ^(http|https):\/\/dl\.app\.gtja\.com\/dzswem\/kvController\/.+\.jpg$ url reject
+# > 国美
+^(http|https):\/\/prom\.mobile\.gome\.com\.cn\/mobile\/promotion\/promscms\/sale.+\.jsp url reject
 
 # H
 # > 杭州公交 - m.ibuscloud.com
@@ -288,8 +296,9 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicd
 ^(http|https):\/\/www\.shihuo\.cn\/app\d\/saveAppInfo url reject
 # > 首汽约车 - gw-passenger.01zhuanche.com
 ^(http|https):\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/zhuanche-passengerController\/notk\/passenger\/recommendADs url reject
-# > 苏宁
+# > 苏宁 - mpcs.suning.com
 ^(http|https):\/\/image\.suning\.cn\/uimg\/ma\/ad\/ url reject
+^(http|https):\/\/mpcs\.suning\.com\/mpcs\/dm\/getDmInfo.+\.html url reject
 # > 神舟专车 - img*.10101111cdn.com
 ^(http|https):\/\/img\d+\.10101111cdn\.com\/adpos\/ url reject
 # > 扫描全能王 - api.intsig.net
@@ -311,8 +320,8 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicd
 # > 腾讯视频
 ^(http|https):\/\/vv\.video\.qq\.com\/getvmind\? url reject
 # ^(http|https):\/\/.+\.mp4.+&sdtfrom=v3004 url reject
-^(http|https):\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/.+\.tc\.qq\.com\/.+p201\.1\.mp4\? url reject
-^(http|https):\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/.+\.tc\.qq\.com\/.+_p201_ url reject
+^(http|https):\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/.+\.tc\.qq\.com\/.+p20\d\.1\.mp4\? url reject
+^(http|https):\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/.+\.tc\.qq\.com\/.+_p20\d_ url reject
 # > 腾讯新闻 - r.inews.qq.com
 ^(http|https):\/\/r\.inews\.qq\.com\/(adsBlacklist|getFullScreenPic|getQQNewsRemoteConfig) url reject
 # > 腾讯体育 - news.ssp.qq.com
@@ -345,7 +354,7 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicd
 # > 网易有钱 - client.mail.163.com
 ^(http|https):\/\/client\.mail\.163\.com\/apptrack\/confinfo\/searchMultiAds url reject
 # > 网易云音乐 - interface.music.163.com
-^(http|https):\/\/interface.music.163.com\/eapi\/ad\/ url reject
+^(http|https):\/\/(interface.music.163.com|((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d))\/eapi\/ad\/ url reject
 # > 网易考拉 - sp.kaola.com
 ^(http|https):\/\/sp\.kaola\.com\/api\/openad url reject
 # > 网易严选 - support.you.163.com
@@ -372,6 +381,8 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app,api.21jingji.com,gw.alicd
 ^(http|https):\/\/thor\.weidian\.com\/ares\/home\.splash\/ url reject
 # > 威锋 - api.feng.com
 ^(http|https):\/\/api\.feng\.com\/v\d\/advertisement\/.*Claunch url reject
+# > 唯品会 - mapi.appvipshop.com
+^(http|https):\/\/mapi\.appvipshop\.com\/vips-mobile\/router\.do\?.+platform\.adver\.get url reject
 
 # X
 # ---(新浪)---
