--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -7,7 +7,7 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ^https?:\/\/www\.zhihu\.com\/question\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
 
 ;JD App 显示历史价格 by yichahucha
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body yichahucha/jd_price.js
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body eval_script.js
 
 ;Taobao App 显示历史价格 by yichahucha
 ;[filter_local]
@@ -18,15 +18,15 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ;ip-cidr, 106.11.162.0/24, reject, no-resolve
 ;ip-cidr, 47.102.83.0/24, reject, no-resolve
 ;或使用JS屏蔽
-^https?://(trade-acs|amdc)\.m\.taobao\.com/(gw/mtop\.taobao\.detail\.getdetail|amdc/mobileDispatch) url script-response-body yichahucha/tb_price.js
+^https?://(trade-acs|amdc)\.m\.taobao\.com/(gw/mtop\.taobao\.detail\.getdetail|amdc/mobileDispatch) url script-response-body eval_script.js
 
 ;Netflix 获取 IMDb 分数 by yichahucha
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header yichahucha/nf_rating.js
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body yichahucha/nf_rating.js
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header eval_script.js
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body eval_script.js
 
 # 去微博应用内广告 by yichahucha
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body wb_ad.js
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body wb_launch.js
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body eval_script.js
 
 # 去微信公众号广告 by Choler
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body NobyDa/QuantumultX/File/Wechat.js
