--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -1,6 +1,6 @@
 hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.com,ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com,amdc.m.taobao.com,www.zhihu.com,*.zhihu.com, api.zhihu.com, api.bilibili.com, app.bilibili.com, p.du.163.com, dida365.com, ticktick.com, api.picsart.c*, api.meiease.c*, api.vuevideo.net, newdrugs.dxy.cn, api.flexibits.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 
-// 部分脚本仅作分享不代表本人观点,前5个hostname为签到专用
+// 部分脚本仅作分享不代表本人观点,前5个hostname为签到专用.
 
 
 ;知乎网页重定向
