--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -29,7 +29,8 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body eval_script.js
 
 # 去微信公众号广告 by Choler
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body eval_script.js
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body NobyDa/QuantumultX/File/Wechat.js
+
 
 # 知乎去广告(修正)
 https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-img
