Added support for eval_script.

--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -6,36 +6,34 @@ hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.co
 ;知乎网页重定向
 ^https?:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
 
-;JD App 显示历史价格 by yichahucha
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body eval_script.js
+//JD
+### https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js url ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig)
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body eval_script.js
 
-;Taobao App 显示历史价格 by yichahucha
-;[filter_local]
-# 注意优先级（建议放在第一条）
-# 使用规则屏蔽 IP，有可能误伤其他功能或者应用，可以自己抓包缩小 IP 范围
-;ip-cidr, 203.119.144.0/23, reject, no-resolve
-;ip-cidr, 203.119.175.0/24, reject, no-resolve
-;ip-cidr, 106.11.162.0/24, reject, no-resolve
-;ip-cidr, 47.102.83.0/24, reject, no-resolve
-;或使用JS屏蔽
+//TB
+### https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js url ^https?://.+/amdc/mobileDispatch, ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail
 ^https?://(trade-acs|amdc)\.m\.taobao\.com/(gw/mtop\.taobao\.detail\.getdetail|amdc/mobileDispatch) url script-response-body eval_script.js
 
-;Netflix 获取 IMDb 分数 by yichahucha
+//Netflix
+### https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js url https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header eval_script.js
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body eval_script.js
 
-# 去微博应用内广告 by yichahucha
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body wb_ad.js
+//Weibo
+### https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js url ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status)
+### https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js url ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body eval_script.js
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body eval_script.js
 
-# 去微信公众号广告 by Choler
+//去微信公众号广告 by Choler
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body NobyDa/QuantumultX/File/Wechat.js
 
 
-# 知乎去广告(修正)
+// 知乎去广告(修正)
 https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-img
 ^https:\/\/api\.zhihu\.com\/appview\/api\/v4\/answers\/.*\/recommendations url reject-img
-^https:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|v\d\/questions|market\/header|people\/) url script-response-body ZhiHuAdBlock.js
+### https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/ZhiHuAdBlock.js url ^https:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|v\d\/questions|market\/header|people\/) 
+^https:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|v\d\/questions|market\/header|people\/) url script-response-body eval_script.js
 
 # 哔哩哔哩动画去广告 (By onewayticket255)
 ^https://app.bilibili.com/x/resource/show/tab\?access_key url script-response-body NobyDa/QuantumultX/File/bilibiliTab.js
@@ -50,8 +48,9 @@ https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-im
 ^https?://p\.du\.163\.com/readtime/info.json url reject
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body NobyDa/QuantumultX/File/wnyd.js
 
-# 滴答清单 pro
-^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body DiDaQingDan.js
+// 滴答清单 pro
+### https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/DiDaQingDan.js url ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status
+^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body eval_script.js
 
 # PicsArt美易 pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body NobyDa/Surge/JS/PicsArt.js
