Remove Unnecessary Items

--- a/QuantumultX/JS.conf
+++ b/QuantumultX/JS.conf
@@ -1,6 +1,6 @@
-hostname = music.163.com,www.flyertea.com,*.smzdm.com,tieba.baidu.com,*.iqiyi.com,ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com,amdc.m.taobao.com,www.zhihu.com,*.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, dida365.com, ticktick.com, api.picsart.c*, api.meiease.c*, api.vuevideo.net, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
+hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com,amdc.m.taobao.com,www.zhihu.com,*.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, dida365.com, ticktick.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 
-// 部分脚本仅作分享不代表本人观点,前5个hostname为签到专用.
+// 部分脚本仅作分享不代表本人观点
 
 
 // 知乎网页重定向
@@ -52,9 +52,6 @@ https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-im
 ####^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/PicsArt.js
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body eval_script.js
 
-// VUE pro
-####^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/VUE.js
-^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body eval_script.js
 
 // 用药助手解锁专业版 (By Primovist)
 ####^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/yyzs.js
