--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -44,7 +44,7 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app
 ^(http|https):\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
 ^(http|https):\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
 ^(http|https):\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
-^(http|https):\/\/(www.)?mycleanmymac\.com\/ url 302 https://macpaw.com/
+^(http|https):\/\/(www.)?(mycleanmymac|xitongqingli)\.com\/ url 302 https://macpaw.com/
 ^(http|https):\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
 ^(http|https):\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
 ^(http|https):\/\/(www.)?ntfsformac\.cn\/ url 302 https://china.paragon-software.com/home-mac/ntfs-for-mac/
@@ -59,8 +59,7 @@ hostname = *.musical.ly,api*.tiktokv.com,api.resso.app
 ^(http|https):\/\/(www.)?yuanchengxiezuo\.com\/ url 302 https://www.teamviewer.com/
 ^(http|https):\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
 
-# TikTok (By Choler & Paris ^_^)
+# TikTok (By Choler)
 (?<=(carrier|account|sys)_region=)CN url 307 JP
-# (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.0.0
 # Resso (By JO2EY)
 (?<=(carrier|account|sys|sim)_region=)cn url 307 in
