Rename and remove unnecessary

--- a/Surge/Scripting.conf
+++ b/Surge/Scripting.conf
@@ -1,9 +1,4 @@
 [Rule]
-# Taobao pricing
-IP-CIDR,203.119.144.0/23,REJECT,no-resolve
-IP-CIDR,203.119.175.0/24,REJECT,no-resolve
-IP-CIDR,106.11.162.0/24,REJECT,no-resolve
-IP-CIDR,47.102.83.0/24,REJECT,no-resolve
 //ZhiHu
 USER-AGENT,AVOS*,REJECT-TINYGIF
 URL-REGEX,https://www.zhihu.com/api/v4/mcn/,REJECT-TINYGIF
@@ -48,6 +43,6 @@ http-response https://api.bilibili.com/pgc/player/api/playurl requires-body=1,ma
 # Picsart pro
 http-response https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
 # Ticktick pro
-http-response ^https:\/\/dida365\.com\/api\/v2\/user\/status requires-body=1,max-size=0,script-path=DiDaQingDan.js
-# Primovist pro
+http-response ^https:\/\/dida365\.com\/api\/v2\/user\/status requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/Ticktick.js
+# Medical Pro
 http-response ^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/yyzs.js
