Added 2  items of check_in

--- a/QuantumultX/GetCookies_eval.conf
+++ b/QuantumultX/GetCookies_eval.conf
@@ -38,3 +38,11 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 // 芒果tv签到
 ####^https:\/\/credits.bz.mgtv.com\/user\/creditsTake eval https://raw.githubusercontent.com/chavyleung/scripts/master/mgtv/mgtv.cookie.js
 ^https:\/\/credits.bz.mgtv.com\/user\/creditsTake url script-request-header eval_cookie.js
+
+// 美团签到
+####^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ eval https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.cookie.js
+^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ url script-request-body eval_cookie.js
+
+//全民K歌签到
+####^https://node\.kg\.qq\.com/webapp/proxy? eval https://raw.githubusercontent.com/chavyleung/scripts/master/qmkg/qmkg.cookie.js
+^https://node\.kg\.qq\.com/webapp/proxy? url script-request-body eval_cookie.js
