--- a/QuantumultX/GetCookies_eval.conf
+++ b/QuantumultX/GetCookies_eval.conf
@@ -1,4 +1,4 @@
-hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, wx.10086.cn, credits.bz.mgtv.com, 
+hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, wx.10086.cn, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com
 ;获取cookie专用，收集自chavy&NobyDa
 
 // 网易云音乐签到
