Deleted Unnecessary Items

--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -1,4 +1,4 @@
-hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com,amdc.m.taobao.com,www.zhihu.com,*.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, dida365.com, ticktick.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
+hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com,amdc.m.taobao.com,www.zhihu.com,*.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 
 // 部分脚本仅作分享不代表本人观点
 
@@ -30,7 +30,6 @@ hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com,amdc.m.t
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body eval_script.js
 
 // 知乎去广告(修正)
-https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-img
 ^https:\/\/api\.zhihu\.com\/appview\/api\/v4\/answers\/.*\/recommendations url reject-img
 ####^https:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|v\d\/questions|market\/header|people\/) eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/ZhiHuAdBlock.js
 ^https:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|v\d\/questions|market\/header|people\/) url script-response-body eval_script.js
@@ -43,10 +42,6 @@ https:\/\/api\.zhihu\.com\/answers\/.*\/comments\/featured-comment url reject-im
 ####^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/NeteaseReading.js
 ^https?://p\.du\.163\.com/readtime/info.json url reject
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body eval_script.js
-
-// TickTick unlock pro
-####^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/Ticktick.js
-^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body eval_script.js
 
 // PicsArt unlock pro
 ####^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json eval https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/PicsArt.js
