--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -1,10 +1,13 @@
-hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
+hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 
 // 部分脚本仅作分享不代表本人观点
 
 
 // 知乎网页重定向
-^https?:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
+// ^https?:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
+
+// Zhihu AdBlock
+^https?:\/\/(api|www)\.zhihu\.com\/(moments(\/recommend)?\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people|appview\/(v2|p)\/(answer\/)?\d{1,10}\?no\_image\=false(\&article\_fixed\_bottom\=1)?\&X\-SUGER\=) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
 
 // JD Pricing
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
