--- a/Clash/Subconverter/DivineEngine.ini
+++ b/Clash/Subconverter/DivineEngine.ini
@@ -14,7 +14,7 @@ surge_ruleset=Final,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Outbound`select`[]Select`[]Auto
+custom_proxy_group=Outbound`select`[]Select
 custom_proxy_group=Streaming`select`[]Outbound
 custom_proxy_group=StreamingSE`select`[]DIRECT`[]Outbound
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT
