--- a/QuantumultX/GetCookies_eval.conf
+++ b/QuantumultX/GetCookies_eval.conf
@@ -1,4 +1,4 @@
-hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, wx.10086.cn, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com
+hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, wx.10086.cn, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com, sf-integral-sign-in.weixinjia.net, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com 
 ;获取cookie专用，收集自chavy&NobyDa
 
 // 网易云音乐签到
@@ -46,3 +46,14 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 //全民K歌签到
 ####^https://node\.kg\.qq\.com/webapp/proxy? eval https://raw.githubusercontent.com/chavyleung/scripts/master/qmkg/qmkg.cookie.js
 ^https://node\.kg\.qq\.com/webapp/proxy? url script-request-body eval_cookie.js
+
+//顺丰速运签到
+####^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index eval https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
+^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index url script-request-header eval_cookie.js
+
+//苏宁签到
+####^https:\/\/passport.suning.com\/ids\/login$ ^https:\/\/luckman.suning.com\/luck-web\/sign\/api\/clock_sign.do ^https:\/\/sign.suning.com\/sign-web\/m\/promotion\/sign\/doSign.do ^https:\/\/gameapi.suning.com\/sngame-web\/(api\/signin\/private\/customerSignOperation.do|gateway\/api\/queryPrize.do) eval https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.cookie.js
+^https:\/\/passport.suning.com\/ids\/login$ url script-request-body eval_cookie.js
+^https:\/\/luckman.suning.com\/luck-web\/sign\/api\/clock_sign.do url script-request-header eval_cookie.js
+^https:\/\/sign.suning.com\/sign-web\/m\/promotion\/sign\/doSign.do url script-request-header eval_cookie.js
+^https:\/\/gameapi.suning.com\/sngame-web\/(api\/signin\/private\/customerSignOperation.do|gateway\/api\/queryPrize.do) url script-request-header eval_cookie.js
