--- a/QuantumultX/GetCookies_eval.conf
+++ b/QuantumultX/GetCookies_eval.conf
@@ -1,4 +1,4 @@
-hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, wx.10086.cn, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com, sf-integral-sign-in.weixinjia.net, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com 
+hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com, sf-integral-sign-in.weixinjia.net, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com 
 ;获取cookie专用，收集自chavy&NobyDa
 
 // 网易云音乐签到
@@ -23,10 +23,6 @@ https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header https://raw.g
 // 京东签到
 // 进入https://bean.m.jd.com/,点击签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
-
-// 10086签到
-^http:\/\/wx.10086.cn\/website\/taskCenter\/index\? url script-request-header ^http:\/\/wx.10086.cn\/website\/taskCenter\/sign\? eval https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
-^http:\/\/wx.10086.cn\/website\/taskCenter\/sign\? url script-request-header ^http:\/\/wx.10086.cn\/website\/taskCenter\/sign\? eval https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
 
 // 芒果tv签到
 ^https:\/\/credits.bz.mgtv.com\/user\/creditsTake url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/mgtv/mgtv.cookie.js
