--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -8,6 +8,9 @@ hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com, www.zhi
 
 // Zhihu AdBlock (可能会出现部分无法加载的问题，请自行抓包所屏蔽ip缩小范围,慎用)
 // ^https?:\/\/(api|www)\.zhihu\.com\/(moments(\/recommend)?\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people|appview\/(v2|p)\/(answer\/)?\d{1,10}\?no\_image\=false(\&article\_fixed\_bottom\=1)?\&X\-SUGER\=) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
+^https:\/\/pic\d\.zhimg\.com\/70\/ url reject-img
+https://(api|www).zhihu.com/(ab|adx|fringe|commercial|ad-style-service|.*(recommendations|extended|featured-comment-ad)|api/v4/mcn/) url reject
+^https?:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
 
 // JD Pricing
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
