Remove Items With No Script

--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -3,15 +3,7 @@ hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com, www.zhi
 // 部分脚本仅作分享不代表本人观点
 
 
-// 知乎网页重定向
-// ^https?:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
-
-# JdJr
-^https?:\/\/img30\.360buyimg\.com\/ott\/jfs\/t1 url reject
-
-// Zhihu AdBlock (可能会出现部分无法加载的问题，请自行抓包所屏蔽ip缩小范围,慎用)
-^https:\/\/pic\d\.zhimg\.com\/70\/ url reject-img
-https://(api|www).zhihu.com/(ab|adx|fringe|commercial|ad-style-service|.*(recommendations|extended|featured-comment-ad)|api/v4/mcn/) url reject
+// Zhihu ADBlock
 ^https?:\/\/(api|www)\.zhihu\.com\/(moments(\/recommend)?\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people|appview\/(v2|p)\/(answer\/)?\d{1,10}\?no\_image\=false(\&article\_fixed\_bottom\=1)?\&X\-SUGER\=) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
 
 // JD Pricing
