--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -1,10 +1,9 @@
-hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn
+hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn
 
 // 部分脚本仅作分享不代表本人观点
 
 // Zhihu ADBlock
 ^https?:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
-
 
 // JD Pricing
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
@@ -13,14 +12,9 @@ hostname = ios.prod.ftl.netflix.com,api.m.jd.com,trade-acs.m.taobao.com, www.zhi
 ^http://amdc\.m\.taobao\.com/amdc/mobileDispatch url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 
-// Netflix Rating 
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
-
 // Weibo AdBlock
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
-
 
 // 微信公众号去广告 by Choler
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/WeChat.js
