--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -1,9 +1,6 @@
-hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn
+hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn, api.flexibits.com
 
 // 部分脚本仅作分享不代表本人观点
-
-// Zhihu ADBlock
-^https?:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
 
 // JD Pricing
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
@@ -18,6 +15,9 @@ hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, ap
 
 // 微信公众号去广告 by Choler
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/WeChat.js
+
+// Zhihu ADBlock
+^https?:\/\/api\.zhihu\.com\/(moments\?(action|feed_type)|topstory\/recommend|.*\/questions|market\/header|people) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
 
 // 哔哩哔哩动画去广告 (By onewayticket255)
 ^https:\/\/app\.bilibili\.com\/(search\/resource|x\/(resource\/show\/tab|v2\/(view|rank|feed|reply\/main|account\/mine))) url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/BilibiliAdBlock.js
@@ -34,3 +34,6 @@ hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, ap
 
 // XMind Unlock Pro
 https:\/\/www\.xmind\.cn\/\_res\/devices url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/XMind.js
+
+// Fantastical Unlock Pro
+^https:\/\/api\.flexibits\.com\/v1\/(auth|account)\/(device|details|appstore-receipt)\/$ url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/Fantastical.js
