--- a/QuantumultX/GetCookies_eval.conf
+++ b/QuantumultX/GetCookies_eval.conf
@@ -1,4 +1,4 @@
-hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com, sf-integral-sign-in.weixinjia.net, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com 
+hostname = music.163.com, www.flyertea.com, *.smzdm.com, c.tieba.baidu.com, *.iqiyi.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, node.kg.qq.com, sf-integral-sign-in.weixinjia.net
 ;获取cookie专用，收集自chavy&NobyDa
 
 // 网易云音乐签到
