--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, p.du.163.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn, api.flexibits.com
+hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, app.bilibili.com, api.picsart.c*, api.meiease.c*, newdrugs.dxy.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.xmind.cn, api.flexibits.com
 
 // 部分脚本仅作分享不代表本人观点
 
@@ -21,10 +21,6 @@ hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, ap
 
 // 哔哩哔哩动画去广告 (By onewayticket255)
 ^https:\/\/app\.bilibili\.com\/(search\/resource|x\/(resource\/show\/tab|v2\/(view|rank|feed|reply\/main|account\/mine))) url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/BilibiliAdBlock.js
-
-// 网易蜗牛读书VIP (By yxiaocai and JO2EY)
-^https?://p\.du\.163\.com/readtime/info.json url reject
-^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/NeteaseReading.js
 
 // PicsArt unlock pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/PicsArt.js
