--- a/QuantumultX/Js_eval.conf
+++ b/QuantumultX/Js_eval.conf
@@ -7,7 +7,7 @@ hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, ap
 
 // Taobao Pricing
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url https://raw.githubusercontent.com/yichahucha/surge/master/script-response-body tb_price.js
+^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/script-response-body tb_price.js
 
 // Weibo AdBlock
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -25,7 +25,7 @@ hostname = api.m.jd.com,trade-acs.m.taobao.com, www.zhihu.com, api.zhihu.com, ap
 // PicsArt unlock pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/PicsArt.js
 
-// 用药助手解锁专业版 (By Primovist)
+// Dingxy Unlock Pro (By Primovist)
 ^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) url script-response-body https://raw.githubusercontent.com/Delecomp/Selfiles/Profiles/Script/MedicalAssist.js
 
 // XMind Unlock Pro
